--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtwebengine-opensource-src (5.7.0-0~neon1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 08 Aug 2016 22:01:23 +0100
+
 qtwebengine-opensource-src (5.6.1-1) UNRELEASED; urgency=medium
 
   * Initial package (Closes: #832420)
