--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtwebengine-opensource-src (5.9.0-0neon) UNRELEASED; urgency=medium
+
+  * New release
+
+ -- Jonathan Riddell <jr@jriddell.org>  Mon, 05 Jun 2017 17:17:19 +0100
+
 qtwebengine-opensource-src (5.7.1+dfsg-2) experimental; urgency=medium
 
   * Fix "bad VCS links in debian/control" (Closes: #849301)
