--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qtwebengine-opensource-src (5.9.0-0neon) UNRELEASED; urgency=medium
+qtwebengine-opensource-src (5.9.0+dfsg-0neon) UNRELEASED; urgency=medium
 
   * New release
 
