--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtwebengine-opensource-src (5.10.0~alpha+dfsg-0neon) UNRELEASED; urgency=medium
+
+  * 5.10
+
+ -- Jonathan Riddell <jr@jriddell.org>  Wed, 13 Sep 2017 13:18:32 +0100
+
 qtwebengine-opensource-src (5.9.1+dfsg-4) unstable; urgency=medium
 
   * Disable gold on arm64, to workaround bug #869768.
