--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qtwebengine-opensource-src (5.10.0~beta+dfsg-0neon) UNRELEASED; urgency=medium
+qtwebengine-opensource-src (5.10.0~beta2+dfsg-0neon) UNRELEASED; urgency=medium
 
   * 5.10
 
