--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtwebengine-opensource-src (5.9.2-0neon) UNRELEASED; urgency=medium
+
+  * New release
+
+ -- Jonathan Riddell <jr@jriddell.org>  Fri, 10 Nov 2017 11:41:41 +0000
+
 qtwebengine-opensource-src (5.9.1+dfsg-2) experimental; urgency=medium
 
   * Make qtwebengine5-dev depend on qtpositioning5-dev, as the built CMake
