--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,12 @@
-qtwebengine-opensource-src (5.9.2+dfsg-3) UNRELEASED; urgency=medium
+qtwebengine-opensource-src (5.9.3+dfsg-0neon) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * Backport upstream patch to fix build with ICU 60.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 09 Nov 2017 13:46:23 +0300
+  [ Jonathan Riddell ]
+  * new release
+
+ -- Jonathan Riddell <jr@jriddell.org>  Wed, 22 Nov 2017 17:23:11 +0000
 
 qtwebengine-opensource-src (5.9.2+dfsg-2) unstable; urgency=medium
 
