--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,10 @@
-qtwebengine-opensource-src (5.9.2+dfsg-3) UNRELEASED; urgency=medium
+qtwebengine-opensource-src (5.9.3+dfsg-0ubuntu1) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * Backport upstream patch to fix build with ICU 60.
+
+  [ Simon Quigley ]
+  * New upstream release.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 09 Nov 2017 13:46:23 +0300
 
