--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ qtwebengine-opensource-src (5.9.3+dfsg-0ubuntu1) UNRELEASED; urgency=medium
 
   [ Simon Quigley ]
   * New upstream release.
+  * Update symbols from build logs.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 09 Nov 2017 13:46:23 +0300
 
