--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtwebengine-opensource-src (5.9.4+dfsg-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Sun, 25 Feb 2018 20:55:46 -0600
+
 qtwebengine-opensource-src (5.9.3+dfsg-0ubuntu1) bionic; urgency=medium
 
   [ Dmitry Shachnev ]
