--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qtwebengine-opensource-src (5.9.5+dfsg-0ubuntu2) UNRELEASED; urgency=medium
+
+
+ -- Dmitry Shachnev <mitya57@ubuntu.com>  Sun, 15 Apr 2018 14:16:48 +0300
+
 qtwebengine-opensource-src (5.9.5+dfsg-0ubuntu1) bionic; urgency=medium
 
   * New upstream release.
