--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qtwebengine-opensource-src (5.9.5+dfsg-0ubuntu2) UNRELEASED; urgency=medium
+qtwebengine-opensource-src (5.9.5+dfsg-0ubuntu2) bionic; urgency=medium
 
   * Forcefully disable make output synchronization introduced in debhelper
     11.1.5~alpha1. Ninja is a single process, and with synchronized output
