--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtwebengine-opensource-src (5.11.2+dfsg-2) unstable; urgency=medium
+
+  * Upload to unstable.
+
+ -- Dmitry Shachnev <mitya57@debian.org>  Tue, 16 Oct 2018 18:52:08 +0300
+
 qtwebengine-opensource-src (5.11.2+dfsg-1) experimental; urgency=medium
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
