--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qtwebengine-opensource-src (5.11.2+dfsg-3) UNRELEASED; urgency=medium
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 20 Oct 2018 14:45:14 +0300
+
 qtwebengine-opensource-src (5.11.2+dfsg-2) unstable; urgency=medium
 
   * Upload to unstable.
