--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtwebengine-opensource-src (5.11.2+dfsg-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 23 Dec 2018 19:57:53 -0300
+
 qtwebengine-opensource-src (5.11.2+dfsg-1) experimental; urgency=medium
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
