--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-qtwebengine-opensource-src (5.11.3+dfsg-1) UNRELEASED; urgency=medium
+qtwebengine-opensource-src (5.11.3+dfsg-1) experimental; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
     - Security fixes from Chromium up to version 70.0.3538.102, including:
       - CVE-2018-16066
@@ -29,7 +28,7 @@ qtwebengine-opensource-src (5.11.3+dfsg-1) UNRELEASED; urgency=medium
   * Bump Qt build dependencies.
   * Update symbols files with buildds' logs.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 23 Dec 2018 19:57:53 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 23 Dec 2018 20:39:47 -0300
 
 qtwebengine-opensource-src (5.11.2+dfsg-1) experimental; urgency=medium
 
