--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtwebengine-opensource-src (5.11.3+dfsg-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 26 Dec 2018 16:35:54 -0300
+
 qtwebengine-opensource-src (5.11.3+dfsg-1) experimental; urgency=medium
 
   * New upstream release.
