--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qtwebengine-opensource-src (5.11.3+dfsg-2) UNRELEASED; urgency=medium
+qtwebengine-opensource-src (5.11.3+dfsg-2) unstable; urgency=medium
 
   [ Dmitry Shachnev ]
   * Drop libsrtp-dev build-dependency (closes: #910300). The code uses a
@@ -7,7 +7,10 @@ qtwebengine-opensource-src (5.11.3+dfsg-2) UNRELEASED; urgency=medium
   [ Simon Quigley ]
   * Change my email to tsimonq2@debian.org now that I am a Debian Developer.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 26 Dec 2018 16:35:54 -0300
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Upload to unstable.
+
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 26 Dec 2018 16:37:02 -0300
 
 qtwebengine-opensource-src (5.11.3+dfsg-1) experimental; urgency=medium
 
